# MUSE-GUI

./: .gitignore  README.md  install.sh  pyproject.toml
examples/: editable_table.py  example.toml  example2.toml  example3.toml  from_settings.py  full_example_new.py  get_capacity_data.py  get_price_data.py  psg_events.py  pydantic_test.py  pyplot_example.py  tabbed_pyplot.py  tabbed_test.py  test.py  test_layouts.py  test_resources.py  test_simple_gui.py
muse_gui/backend/: plots.py  resources.py  settings.py  utils.py
muse_gui/backend/data/: abstract.py  agent.py  commodity.py  process.py  region.py  run_model.py  sector.py  timeslice.py
muse_gui/backend/pydantic_models/: global_input_files_model.py  main_settings_model.py  sectors_model.py
muse_gui/backend/settings/: __init__.py  base.py  carbon_market_model.py  global_input_files_model.py  main_settings_model.py  output.py  sectors_model.py
muse_gui/backend/settings_models/: carbon_market_model.py  main_settings_model.py  sectors_model.py
muse_gui/data_defs/: abstract.py  agent.py  commodity.py  process.py  region.py  sector.py  technology.py  timeslice.py
muse_gui/frontend/popups/: __init__.py  associations_popup.py
muse_gui/frontend/views/: agent.py  available_years.py  base.py  commodity.py  exceptions.py  region.py  run_view.py  sector.py  technology.py  timeslices.py
muse_gui/frontend/widget_funcs/: data_funcs.py  data_view_generator.py  generics.py  plotting.py  table.py
muse_gui/frontend/widgets/: base.py  button.py  form.py  listbox.py  tabgroup.py  table.py  utils.py
(+21 files in other folders)
