[tool.poetry]
name = "muse_gui"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.57.0"
pydantic = "^1.9.0"
toml = "^0.10.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.14.0"
pytest-xdist = "^2.2.1"
pytest-cov = "^2.11.1"
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"
